<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoctorSearch</string>

    <!-- WelcomeActivity -->
    <string name="welcome_activity_message">
<![CDATA[
		<html>
		<head></head>
		<body style="text-align:justify;">
        This programm is an instrument for people who need urgent medical help in 
        case of sudden disease exacerbation. All users are divided in two groups - Patients (people who might need help) 
        and Doctors (real doctors ready to help quickly). <br><br>Patients can send a SOS signal in case of emrgency. SOS signal will contain information 
        about user name, send time and coordinates. <br><br>Doctors can determine nearby people who needs urgent medical 
        aid using interactive map, where closests SOS signals are displayed.      
        </body>
		</html>
		]]>
    </string>
    <string name="welcome_activity_next">Next</string>
    <string name="cancel_welcome_message">Do not show this screen next time</string>

    <!-- Prefernces -->
    <string name="description_title">Description</string>
    <string name="description_summary">Set description</string>
    <string name="description_dialog_title">Enter description</string>
    <string name="server_url_title">Server URL</string>
    <string name="server_url_summary">Set server URL</string>
    <string name="server_url_dialog_title">Enter server URL</string>
    <string name="radius_title">Radius</string>
    <string name="radius_summary">Set radius(in kilometers)</string>
    <string name="tracking_period_title">Tracking period</string>
    <string name="tracking_period_summary">Set tracking period(in minutes)</string>
    <string name="welcome_activity_disabled_title">Disable welcome screen</string>
    <string name="welcome_activity_disabled_summary">Do not show welcome screen on startup</string>
    <string name="events_period_title">Events update period</string>
    <string name="events_period_summary">Set events update period(in seconds)</string>
    <string name="relevant_period_title">Event max age</string>
    <string name="relevant_period_summary">Set max age of loaded SOS events(in hours)</string>

    <!-- LoginActivity -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="remember_me">Remember me</string>
    <string name="menu_settings">Settings</string>
    <string name="register">Register</string>

    <!-- MainActivity -->
    <string name="menu_sign_out">Sign out</string>
    <string name="map_tab_name">Events map</string>
    <string name="sos">SOS</string>

    <!-- settings -->
    <string name="channel">Channel</string>
    <string name="key">Key</string>
    <string name="user_description">Description:</string>
    <string name="server_address">Geo2Tag server</string>
    <string name="time_request">Time between ticks</string>
    <string name="radius">Radius (km)</string>
    <string name="tracking_period">Tracking period (min)</string>
    <string name="uri">Uri</string>

    <!-- CheckBox -->
    <string name="checkbox_hide_on_start">Hide tracker on start</string>
    <string name="checkbox_show_tick_toast">Show tick toast</string>

    <!-- buttons -->
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnStart">Start Tracker</string>
    <string name="btnStop">Stop Tracker</string>
    <string name="btnSettings">Settings</string>
    <string name="btnHide">Hide</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_about">About</string>
<string name="about_text">
    <![CDATA[
    		<html>
		<head></head>
		<body style="text-align:justify;">
        Development of this application was partly supported by Karelia ENPI CBC programme grant KA432 “Journey planner service for disabled people 
        (Social Navigator)”, co-funded by the European Union, the Russian Federation and the Republic of Finland. 
    </body>
		</html>
		]]>
</string>
    <string name="menu_about">About</string>

</resources>